Fixed logo and alignments

--- a/client/src/components/Poll/CreatePoll/CreatePolls.css
+++ b/client/src/components/Poll/CreatePoll/CreatePolls.css
@@ -1,7 +1,6 @@
 .CreatePolls{
     
     width: 1280px;
-    height: 100vh;
     font-family: helvetica;
     
 }
